# src/routes/routes.go
@@ -3,17 +3,16 @@ package routes
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/pedrohrbarros/toolbox_backend/src/controller/url"
-	"github.com/pedrohrbarros/toolbox_backend/src/controller/document"
+	"github.com/pedrohrbarros/toolbox_backend/src/controller/file"
 	"github.com/pedrohrbarros/toolbox_backend/src/controller/secret"
-	"github.com/pedrohrbarros/toolbox_backend/src/controller/image"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 func InitRoutes(r *gin.RouterGroup) {
 	r.POST("/url/shortener", url.ShortUrl)
-	r.POST("/document/convert", document.ConvertFile)
+	r.POST("/file/convert", file.ConvertFile)
 	r.POST("/secret/generator", secret.GenerateSecret)
-	r.POST("/image/resize", image.ResizeImage)
+	r.POST("/file/image/resize", file.ResizeImage)
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 }
